Fix PR c++/42069

gcc/cp/ChangeLog:
	PR c++/42069
	* pt.c (convert_template_argument): Strip typedefs from SCOPE_REFs.

gcc/testsuite/ChangeLog:
	PR c++/42069
	* g++.dg/template/typedef23.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154768 138bc75d-0d04-0410-961f-82ee72b054a4